--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,6 +25,18 @@
       border: 1px solid #007bff;
       margin: 5px;
       background-color: #f4f4f4;
+      position: relative;
+    }
+    .waiting-badge {
+      position: absolute;
+      top: 50%;
+      left: 10px;
+      transform: translateY(-50%);
+      background-color: #007bff;
+      color: white;
+      padding: 5px 10px;
+      border-radius: 20px;
+      font-size: 12px;
     }
   </style>
 </head>
@@ -32,35 +44,34 @@
 <h1>실시간 대기열</h1>
 <input type="number" id="userId" placeholder="사용자 ID 입력">
 <button onclick="enterQueue()">대기열 추가</button>
-<h2>대기열 상태</h2>
-<ul id="queue-list"></ul>
-
 <h2>대기 상태</h2>
 <ul id="waiting-list"></ul>
 
 <script>
   let stompClient;
+  let userId;
 
-  // WebSocket 연결 및 대기열 구독
   function connectWebSocket() {
     const socket = new SockJS('http://localhost:8080/ws');
     stompClient = Stomp.over(socket);
 
     stompClient.connect({}, () => {
       console.log('WebSocket 연결 성공');
+
+      // 대기열 상태 구독
       stompClient.subscribe('/topic/queue/1', (message) => {
-        console.log('수신 메시지:', message.body); // 메시지 디버깅
         const queueDetails = JSON.parse(message.body);
-        updateQueue(queueDetails);  // 대기열 및 대기 상태 업데이트
+        updateWaiting(queueDetails.waiting || []);
       });
     }, (error) => {
       console.error('WebSocket 연결 실패:', error);
     });
   }
 
-  // 대기열에 사용자 추가
   function enterQueue() {
-    const userId = document.getElementById('userId').value;
+    const userIdInput = document.getElementById('userId');
+    const userId = userIdInput.value;
+
     if (!userId) {
       alert('사용자 ID를 입력해주세요.');
       return;
@@ -69,54 +80,68 @@
     fetch(`http://localhost:8080/queue/enter?userId=${userId}&maxTickets=3`, {
       method: 'POST',
     })
-            .then(response => response.text())
-            .then(result => console.log(result))
-            .catch(err => console.error(err));
+            .then(response => response.json())
+            .then(result => {
+              console.log('서버 응답:', result);
+
+              // 사용자 상태 확인
+              if (result.status === 'QUEUE') {
+                // 대기열에 추가된 경우 좌석 선택 페이지로 이동
+                console.log(`Redirecting to seat.html with userId: ${userId}`);
+                window.location.href = `/seat.html?userId=${userId}`;
+              } else if (result.status === 'WAITING') {
+                // 대기 상태인 경우 대기 목록 업데이트
+                console.log(`대기 상태입니다. 내 앞에 ${result.position+1}명이 있습니다.`);
+                updateWaiting(result.waitingList || []);
+              } else {
+                console.error('예기치 못한 상태:', result);
+              }
+            })
+            .catch(err => {
+              console.error('대기열 추가 중 오류:', err);
+              alert('대기열 추가 중 오류가 발생했습니다.');
+            });
   }
 
-  // 대기열 및 대기 상태 업데이트
-  function updateQueue(queueDetails) {
-    const queueList = document.getElementById('queue-list');
-    const waitingList = document.getElementById('waiting-list');
-    const userId = document.getElementById('userId').value;  // 현재 사용자 ID
+  function updateWaiting(waitingList) {
+    const waitingContainer = document.getElementById('waiting-list');
+    const existingItems = new Set();
 
-    queueList.innerHTML = '';  // 대기열 초기화
-    waitingList.innerHTML = '';  // 대기 상태 초기화
-
-    const queue = queueDetails.queue || [];
-    const waiting = queueDetails.waiting || [];
-    const maxTickets = queueDetails.maxTickets || 0;
-
-    // 대기열 표시
-    queue.forEach((userIdInQueue, index) => {
-      const listItem = document.createElement('li');
-      listItem.textContent = `${index + 1}. 사용자 ID: ${userIdInQueue}`;
-      queueList.appendChild(listItem);
+    waitingContainer.querySelectorAll('li').forEach((item) => {
+      const userId = item.dataset.userId;
+      existingItems.add(userId);
     });
 
-    // 대기 상태 표시
-    waiting.forEach((userIdInWaiting, index) => {
-      const listItem = document.createElement('li');
-      listItem.textContent = `${index + 1}. 사용자 ID: ${userIdInWaiting}, 대기 순서: ${index + 1}`;
-      waitingList.appendChild(listItem);
+    waitingList.forEach((userId, index) => {
+      if (!existingItems.has(userId)) {
+        const listItem = document.createElement('li');
+        const badge = document.createElement('span');
+
+        badge.classList.add('waiting-badge');
+        badge.textContent = `대기 ${index + 1}번`;
+
+        listItem.textContent = `사용자 ID: ${userId}`;
+        listItem.dataset.userId = userId; // 사용자 ID를 dataset에 저장
+        listItem.appendChild(badge);
+        waitingContainer.appendChild(listItem);
+      }
     });
 
-    // 내 대기 상태 표시
-    const positionInQueue = queue.indexOf(userId);
-    const positionInWaiting = waiting.indexOf(userId);
-
-    if (positionInQueue >= 0) {
-      console.log(`대기열에 있습니다. 현재 순서: ${positionInQueue + 1}`);
-    } else if (positionInWaiting >= 0) {
-      console.log(`대기 중입니다. 내 앞에 ${positionInWaiting}명 남았습니다.`);
-    } else {
-      console.log("대기열 또는 대기 상태에 없습니다.");
-    }
+    // 기존 대기 상태에서 없어진 사용자 제거
+    waitingContainer.querySelectorAll('li').forEach((item) => {
+      const userId = item.dataset.userId;
+      if (!waitingList.includes(userId)) {
+        item.remove();
+      }
+    });
   }
 
-  // WebSocket 연결
-  connectWebSocket();
+
+
+  // 페이지 로드 시 WebSocket 연결
+  document.addEventListener('DOMContentLoaded', () => {
+    connectWebSocket();
+  });
 </script>
-
 </body>
 </html>
