--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -50,6 +50,25 @@
       max-width: 200px;
       height: auto;
     }
+
+    .progress-bar-container {
+      margin: 20px auto;
+      width: 30%;
+      height: 30px;
+      background-color: #e0e0e0;
+      border-radius: 15px;
+      overflow: hidden;
+      box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
+      display: none;
+    }
+
+    .progress-bar {
+      height: 100%;
+      background: linear-gradient(90deg, #78359A, #A052FF);
+      width: 0;
+      border-radius: 15px;
+      transition: width 0.3s ease-in-out;
+    }
   </style>
 </head>
 <body>
@@ -65,20 +84,24 @@
   <img src="/static/alarm-clock.png" alt="Waiting Clock">
 </div>
 
-<p id="current-user-status"></p>
+<!-- 프로그레스 바 -->
+<div class="progress-bar-container" id="progressBarContainer">
+  <div class="progress-bar" id="progressBar"></div>
+</div>
 
+<p id="current-user-status"></p>
 
 <script>
   let stompClient;
   let currentUserId = null; // 현재 사용자 ID 저장
   let lastPosition = null; // 이전 위치 저장 (깜빡임 방지)
+  let totalQueueSize = 0; // 대기열 전체 크기 저장
 
   // 이벤트 정보 불러오기
   function loadEventInfo() {
     fetch('http://localhost:8080/event/2') // API 경로 수정 필요
             .then(response => response.json())
             .then(event => {
-              // 이벤트 정보를 DOM에 추가
               const eventInfoDiv = document.getElementById('event-info');
               eventInfoDiv.innerHTML = `
           <h2>${event.name}</h2>
@@ -93,7 +116,6 @@
             });
   }
 
-  // 대기열에 사용자 추가
   function enterQueue() {
     const userIdInput = document.getElementById('userId');
     const userId = userIdInput.value.trim();
@@ -113,13 +135,17 @@
               console.log('서버 응답:', result);
 
               if (result.status === 'QUEUE') {
-                // QUEUE 상태라면 바로 좌석 선택 페이지로 이동
-                window.location.href = `/seat.html?userId=${userId}`;
+                window.location.href = `/static/seat.html?userId=${userId}`;
               } else if (result.status === 'WAITING') {
-                // WAITING 상태라면 이벤트 정보 숨기고 시계 이미지 표시
                 document.getElementById('event-info').classList.add('hidden');
                 document.getElementById('waiting-image').style.display = 'block';
                 document.getElementById('queue-controls').classList.add('hidden');
+                document.getElementById('progressBarContainer').style.display = 'block';
+
+                // WebSocket 연결 확인
+                connectWebSocket();
+
+                // 대기열 상태 업데이트
                 updateWaitingStatus(result.position);
               } else {
                 console.error('예기치 못한 상태:', result);
@@ -131,53 +157,62 @@
             });
   }
 
+
   // 대기 상태 업데이트
   function updateWaitingStatus(position) {
     const currentUserDisplay = document.getElementById('current-user-status');
-
-    // 이전 위치와 동일하면 업데이트하지 않음 (깜빡임 방지)
-    if (lastPosition === position) return;
-
-    lastPosition = position; // 현재 위치 저장
-
-    // 상태 업데이트
     if (position === -1) {
       currentUserDisplay.textContent = '현재 대기 상태가 아닙니다.';
+      return;
+    }
+    currentUserDisplay.textContent = `현재 대기열에서 내 앞에 ${position}명이 있습니다.`;
+    updateProgressBar(position);
+  }
+
+  // 프로그레스 바 업데이트
+  function updateProgressBar(position) {
+    const progressBar = document.getElementById('progressBar');
+    if (totalQueueSize > 0) {
+      const progress = ((totalQueueSize - position) / totalQueueSize) * 100; // 진행률 계산
+      progressBar.style.width = `${progress}%`;
     } else {
-      currentUserDisplay.textContent = `현재 대기열에서 내 앞에 ${position}명이 있습니다.`;
+      progressBar.style.width = '0%';
     }
   }
 
-  // WebSocket 연결
   function connectWebSocket() {
+    if (stompClient && stompClient.connected) {
+      console.log('이미 WebSocket이 연결되어 있습니다.');
+      return;
+    }
+
     const socket = new SockJS('http://localhost:8080/ws');
     stompClient = Stomp.over(socket);
 
     stompClient.connect({}, () => {
       console.log('WebSocket 연결 성공');
 
-      // 대기열 상태 구독
       stompClient.subscribe('/topic/queue/1', (message) => {
         const queueDetails = JSON.parse(message.body);
-
         console.log('받은 대기열 상태:', queueDetails);
 
-        // 현재 사용자 위치를 확인하고 갱신
-        if (queueDetails.waiting && queueDetails.waiting.includes(currentUserId)) {
+        // 대기열 전체 크기 계산
+        totalQueueSize = queueDetails.waiting.length + queueDetails.queue.length;
+
+        if (queueDetails.waiting.includes(currentUserId)) {
           const position = queueDetails.waiting.indexOf(currentUserId);
           updateWaitingStatus(position);
         }
 
-        // 현재 사용자가 QUEUE로 들어간 경우 리다이렉트 처리
-        if (queueDetails.queue && queueDetails.queue.includes(currentUserId)) {
-          console.log(`Redirecting to seat.html for userId: ${currentUserId}`);
-          window.location.href = `/seat.html?userId=${currentUserId}`;
+        if (queueDetails.queue.includes(currentUserId)) {
+          window.location.href = `/static/seat.html?userId=${currentUserId}`;
         }
       });
     }, (error) => {
       console.error('WebSocket 연결 실패:', error);
     });
   }
+
 
   // 페이지 로드 시 실행
   document.addEventListener('DOMContentLoaded', () => {
