--- a/src/main/resources/static/seat.html
+++ b/src/main/resources/static/seat.html
@@ -8,27 +8,35 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
+            align-content: center;
         }
 
         .seat-container {
             display: grid;
-            grid-template-columns: repeat(5, 1fr);
-            gap: 10px;
-            max-width: 300px;
+            grid-template-columns: repeat(20, 1fr); /* 10개의 열로 구성 */
+            gap: 5px;
+            max-width: 600px;
             margin: 20px auto;
+
         }
 
         .seat {
-            width: 50px;
-            height: 50px;
-            border: 1px solid #007AFF;
-            background-color: #E0E0E0;
-            border-radius: 5px;
+            width: 30px;
+            height: 30px;
+            background-color: #A052FF; /* 초록색: 예약 가능 */
+            border-radius: 3px;
             cursor: pointer;
+            border: none;
+        }
+
+        .seat.reserved {
+            background-color: #CCCCCC;
+            border: none;
+            cursor: not-allowed;
         }
 
         .seat.selected {
-            background-color: #007AFF;
+            background-color: #00FF00;
             color: white;
         }
 
@@ -39,7 +47,7 @@
         button {
             padding: 10px 20px;
             border: none;
-            background-color: #007AFF;
+            background-color: #A052FF;
             color: white;
             border-radius: 5px;
             cursor: pointer;
@@ -50,17 +58,23 @@
             background-color: #CCCCCC;
             cursor: not-allowed;
         }
+
+        .hidden {
+            display: none;
+        }
     </style>
 </head>
 <body>
-<h1>좌석 선택</h1>
-<div class="seat-container" id="seatContainer"></div>
+<h1>B-3구역</h1>
+<div id="loadingMessage">좌석 정보를 불러오는 중...</div>
+<div class="seat-container hidden" id="seatContainer"></div>
+
 <div class="controls">
     <button id="confirmButton" disabled>확인</button>
 </div>
 
 <script>
-    const totalSeats = 200; // 총 좌석 수
+    const totalSeats = 249; // 총 좌석 수
     let selectedSeat = null;
 
     // URL에서 userId 가져오기
@@ -75,16 +89,59 @@
     const seatContainer = document.getElementById('seatContainer');
     const confirmButton = document.getElementById('confirmButton');
 
-    // 좌석 생성
-    for (let i = 1; i <= totalSeats; i++) {
-        const seat = document.createElement('div');
-        seat.classList.add('seat');
-        seat.textContent = i;
-        seat.dataset.seatNumber = i; // 좌석 번호 저장
+    // 좌석 상태 로드
+    async function loadSeats() {
+        const loadingMessage = document.getElementById('loadingMessage');
+        const seats = new Array(totalSeats).fill(null); // 총 좌석 크기의 배열 생성
 
-        // 좌석 클릭 이벤트
-        seat.addEventListener('click', () => selectSeat(seat, i));
-        seatContainer.appendChild(seat);
+        const promises = [];
+        for (let i = 1; i <= totalSeats; i++) {
+            promises.push(
+                checkReservationStatus(i).then(isReserved => {
+                    // 정확한 순서에 맞게 좌석 정보 저장
+                    const seat = document.createElement('div');
+                    seat.classList.add('seat');
+                    seat.textContent = i;
+                    seat.dataset.seatNumber = i;
+
+                    if (isReserved) {
+                        seat.classList.add('reserved'); // 예약된 좌석 표시
+                        seat.style.cursor = "not-allowed";
+                    } else {
+                        // 예약 가능 좌석 클릭 이벤트
+                        seat.addEventListener('click', () => selectSeat(seat, i));
+                    }
+
+                    seats[i - 1] = seat; // 좌석 정보를 정확한 인덱스에 저장
+                })
+            );
+        }
+
+        // 모든 예약 상태를 확인한 후 DOM에 추가
+        await Promise.all(promises);
+
+        // DOM 업데이트
+        const fragment = document.createDocumentFragment();
+        seats.forEach(seat => fragment.appendChild(seat));
+        seatContainer.appendChild(fragment);
+
+        // 로딩 메시지 숨기고 좌석 컨테이너 표시
+        loadingMessage.classList.add('hidden');
+        seatContainer.classList.remove('hidden');
+    }
+
+    async function checkReservationStatus(seatNumber) {
+        try {
+            const response = await fetch(`http://localhost:8080/ticket/${seatNumber}/status`);
+            if (response.ok) {
+                const result = await response.json();
+                return !result;
+            } else {
+                return false;
+            }
+        } catch (error) {
+            return false;
+        }
     }
 
     // 좌석 선택
@@ -96,7 +153,7 @@
         selectedSeat = seat;
 
         confirmButton.disabled = false;
-        confirmButton.dataset.seatNumber = seatNumber; // 선택된 좌석 번호 저장
+        confirmButton.dataset.seatNumber = seatNumber;
     }
 
     // 좌석 예약 요청
@@ -116,10 +173,12 @@
                 }
             })
             .catch(err => {
-                console.error('예약 요청 중 오류 발생:', err);
                 alert('예약 요청 중 오류가 발생했습니다.');
             });
     });
+
+    // 페이지 로드 시 좌석 상태 불러오기
+    document.addEventListener('DOMContentLoaded', loadSeats);
 </script>
 </body>
 </html>
