--- a/src/main/resources/static/signin.html
+++ b/src/main/resources/static/signin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INTERLINK Signup</title>
+    <title>INTERLINK Signin</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -15,7 +15,7 @@
             background-color: #f0f0f0;
         }
 
-        #signup-container {
+        #signin-container {
             background: #ffffff;
             padding: 20px;
             border-radius: 8px;
@@ -60,7 +60,7 @@
         }
 
         button:hover {
-            background-color: #A052FF;
+            background-color: #78359A;
         }
 
         .error {
@@ -71,15 +71,9 @@
     </style>
 </head>
 <body>
-<div id="signup-container">
-    <h1>회원가입</h1>
-    <form id="signupForm">
-        <div class="form-group">
-            <label for="userName">이름</label>
-            <input type="text" id="userName" placeholder="사용자 이름" required>
-            <div id="userNameError" class="error"></div>
-        </div>
-
+<div id="signin-container">
+    <h1>로그인</h1>
+    <form id="signinForm">
         <div class="form-group">
             <label for="userID">이메일</label>
             <input type="email" id="userID" placeholder="이메일" required>
@@ -92,39 +86,26 @@
             <div id="userPwError" class="error"></div>
         </div>
 
-        <button type="submit">회원가입</button>
+        <button type="submit">로그인</button>
     </form>
 </div>
 
 <script>
-    document.getElementById('signupForm').addEventListener('submit', async function(event) {
-        event.preventDefault(); // 기본 폼 제출 동작 방지
+    document.getElementById('signinForm').addEventListener('submit', async function(event) {
+        event.preventDefault();
 
-        // 사용자 입력 가져오기
-        const userName = document.getElementById('userName').value;
         const userID = document.getElementById('userID').value;
         const userPw = document.getElementById('userPw').value;
 
-        // 오류 메시지 초기화
-        document.getElementById('userNameError').textContent = '';
         document.getElementById('userIDError').textContent = '';
         document.getElementById('userPwError').textContent = '';
 
         let isValid = true;
 
-        // 이름 검증
-        if (userName.length < 3) {
-            document.getElementById('userNameError').textContent = '이름은 최소 3자 이상이어야 합니다.';
-            isValid = false;
-        }
-
-        // 이메일 검증
         if (!/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(userID)) {
             document.getElementById('userIDError').textContent = '올바른 이메일 형식을 입력하세요.';
             isValid = false;
         }
-
-        // 비밀번호 검증
         if (userPw.length < 6) {
             document.getElementById('userPwError').textContent = '비밀번호는 최소 6자 이상이어야 합니다.';
             isValid = false;
@@ -132,24 +113,23 @@
 
         if (isValid) {
             try {
-                const response = await fetch('/auth/sign-up', {
+                const response = await fetch('/auth/sign-in', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({
                         email: userID,
-                        password: userPw,
-                        name: userName
+                        password: userPw
                     })
                 });
 
                 if (response.ok) {
-                    alert('회원가입이 완료되었습니다!');
-                    document.getElementById('signupForm').reset();
+                    alert('로그인 성공!');
+                    document.getElementById('signinForm').reset();
                 } else {
                     const errorData = await response.json();
-                    alert(`회원가입 실패: ${errorData.message || '알 수 없는 오류'}`);
+                    alert(`로그인 실패: ${errorData.message || '알 수 없는 오류'}`);
                 }
             } catch (error) {
                 alert(`서버 오류: ${error.message}`);
